--- a/blog/article/templates/article/articleCreate.html
+++ b/blog/article/templates/article/articleCreate.html
@@ -5,9 +5,12 @@
 {% endblock %}
 {% block heading %}新增文章{% endblock %}
 {% block content %}
-<form method="post" action="{% url 'article:articleCreate' %}">
+<form id="articleForm" method="post" action="{% url 'article:articleCreate' %}">
   {% csrf_token %}
   {{ articleForm.as_p }}
-  <input type="submit" value="送出">
+</form>  
+  <input form="articleForm" class="btn" type="submit" value="送出">
+  <input form="deleteForm" class="btn" type="submit" value="刪除">
+  <a class="btn" href="{% url 'article:article' %}">放棄</a>
 </form>
 {% endblock %}
