--- a/blog/main/templates/main/base.html
+++ b/blog/main/templates/main/base.html
@@ -4,12 +4,16 @@
 <head>
 <title>部落格</title>
 <meta charset="utf-8">
+<link rel="icon" href="{% static 'main/img/fav.ico' %}">
 <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
 {% block css %}{% endblock %}
 </head>
 <body>
 {% include 'main/menu.html' %}
 <h2>部落格 -- {% block heading %}{% endblock %}</h2>
+{% for message in messages %}
+  <p class="{{ message.tags }}">{{ message }}</p>
+{% endfor %}
 {% block content %}{% endblock %}
 </body>
 </html>
